--- a/.github/workflows/main_thisagain.yml
+++ b/.github/workflows/main_thisagain.yml
@@ -26,11 +26,14 @@ jobs:
           npm install
           npm run build --if-present
 
+      - name: Zip artifact for deployment
+        run: zip release.zip * .env -r
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -52,4 +55,4 @@ jobs:
           app-name: 'ThisAgain'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6994C66E85E94D209E7C0362FA8B2210 }}
-          package: .
+          package: release.zip
